feat: back convert alt

--- a/dreambooth-aki.ipynb
+++ b/dreambooth-aki.ipynb
@@ -388,10 +388,12 @@
     "convert_model_path = f\"output/{model_folder_name}\"\n",
     "ckpt_path = f'{convert_model_path}/model.ckpt'\n",
     "save_half = True\n",
+    "use_alt = False\n",
     "\n",
     "ckpt_convert_half_arg = \"--half\" if save_half else \"\"\n",
+    "back_converter_arg = \"back_convert_alt.py\" if use_alt else \"back_convert.py\"\n",
     "\n",
-    "!$py310 back_convert.py --model_path $convert_model_path --checkpoint_path $ckpt_path $ckpt_convert_half_arg\n",
+    "!$py310 $back_converter_arg --model_path $convert_model_path --checkpoint_path $ckpt_path $ckpt_convert_half_arg\n",
     "print(f\"[*] 转换的模型保存在如下路径 {ckpt_path}\")"
    ]
   },
