--- a/dreambooth-aki.ipynb
+++ b/dreambooth-aki.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## 相关说明\n",
     "\n",
-    "详细使用教程[bilibili 秋葉aaaki](https://space.bilibili.com/12566101)\n",
+    "详细使用教程 [bilibili 秋葉aaaki](https://www.bilibili.com/video/BV1SR4y1y7Lv/)\n",
     "\n",
     "修改自 [Nyanko Lepsoni 的 Colab 笔记本](https://colab.research.google.com/drive/17yM4mlPVOFdJE_81oWBz5mXH9cxvhmz8)"
    ]
@@ -38,18 +38,25 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "py310 = sys.executable\n",
+    "import os\n",
     "\n",
-    "!$py310 --version\n",
-    "%cd /root/autodl-tmp/dreambooth-aki\n",
+    "# 本镜像专属\n",
+    "os.environ[\"PATH\"] = f'/root/miniconda3/envs/diffusers/bin:{os.environ[\"PATH\"]}'\n",
+    "DB_SCRIPT_WORK_PATH = os.getcwd() # \"/root/autodl-tmp/dreambooth-aki\"\n",
+    "\n",
+    "!python --version\n",
+    "%cd $DB_SCRIPT_WORK_PATH\n",
     "\n",
     "TRAINER = \"train_dreambooth.py\"\n",
     "CONVERTER = \"convert_v2.py\"\n",
     "BACK_CONVERTER = \"back_convert.py\"\n",
-    "ACCELERATE_BIN = \"/root/miniconda3/envs/diffusers/bin/accelerate\"\n",
     "\n",
     "SRC_PATH = \"./model-sd\"\n",
-    "MODEL_NAME = \"./model-hf\""
+    "MODEL_NAME = \"./model-hf\"\n",
+    "\n",
+    "# 模型保存路径\n",
+    "OUTPUT_DIR = \"./output\"\n",
+    "!mkdir -p $OUTPUT_DIR"
    ]
   },
   {
@@ -59,7 +66,7 @@
    "source": [
     "## 转换ckpt文件\n",
     "\n",
-    "镜像里，我已经帮你转换好了final-prune这个模型。并且镜像为了节省空间，并没有自带未转换的模型。\n",
+    "镜像里，我已经帮你转换好了animefull-final-prune这个模型。并且镜像为了节省空间，并没有自带未转换的模型。\n",
     "**如果有model-hf这个文件夹，那就不需要运行这个转换模型了。**"
    ]
   },
@@ -72,7 +79,7 @@
    "source": [
     "# 这步骤有些慢，没准要等个几分钟\n",
     "vae_arg = f\"--vae_path {SRC_PATH}/animevae.pt\"\n",
-    "!$py310 $CONVERTER --checkpoint_path $SRC_PATH/model.ckpt --original_config_file $SRC_PATH/config.yaml $vae_arg --dump_path $MODEL_NAME --scheduler_type ddim"
+    "!python $CONVERTER --checkpoint_path $SRC_PATH/model.ckpt --original_config_file $SRC_PATH/config.yaml $vae_arg --dump_path $MODEL_NAME --scheduler_type ddim"
    ]
   },
   {
@@ -117,12 +124,7 @@
     "\n",
     "# 预览图tag设置\n",
     "SAVE_SAMPLE_PROMPT = \"masterpiece, best quality, bocchitherock 1girl, looking at viewer\"\n",
-    "SAVE_SAMPLE_NEGATIVE_PROMPT = \"lowres, bad anatomy, bad hands, text, error, missing fingers, extra digit, fewer digits, cropped, worst quality, low quality, normal quality, jpeg artifacts, signature, watermark, username, blurry\"\n",
-    "\n",
-    "# 模型保存路径\n",
-    "OUTPUT_DIR = \"./output\"\n",
-    "print(f\"[*] 模型将会保存在这个路径 {OUTPUT_DIR}\")\n",
-    "!mkdir -p $OUTPUT_DIR"
+    "SAVE_SAMPLE_NEGATIVE_PROMPT = \"lowres, bad anatomy, bad hands, text, error, missing fingers, extra digit, fewer digits, cropped, worst quality, low quality, normal quality, jpeg artifacts, signature, watermark, username, blurry\""
    ]
   },
   {
@@ -151,7 +153,7 @@
     "if use_wandb:\n",
     "  if wandb_apikey == \"\":\n",
     "    raise ValueError('Invalid wandb.ai APIKey')\n",
-    "  !$py310 -m wandb login $wandb_apikey\n",
+    "  !python -m wandb login $wandb_apikey\n",
     "\n",
     "if use_tensorboard:\n",
     "  !rm -rf /tmp/.tensorboard-info/\n",
@@ -199,21 +201,21 @@
     "\n",
     "### lr_scheduler\n",
     "学习率调整策略\n",
-    "一般lr_scheduler就用cosine、cosine_with_restarts就可以了。\n",
-    "想了解更多关于lr_scheduler可以看看这个[知乎](https://www.zhihu.com/question/315772308/answer/2384958925)\n",
+    "一般 lr_scheduler 就用cosine、cosine_with_restarts 就可以了。\n",
+    "想了解更多关于 lr_scheduler 可以看看这个 [知乎](https://www.zhihu.com/question/315772308/answer/2384958925)\n",
     "\n",
     "### batch_size\n",
-    "一般是1。我推荐不要超过3。调整batch_size需要同时调整学习率\n",
-    "详情参考我的视频[BV1A8411775m](https://www.bilibili.com/video/BV1A8411775m/)\n",
+    "一般是1。我推荐不要超过3。调整 batch_size 需要同时调整学习率\n",
+    "详情参考我的视频 [BV1A8411775m](https://www.bilibili.com/video/BV1A8411775m/)\n",
     "\n",
     "### num_class_images\n",
-    "class image的数量。如果class-images文件夹内的图片数量小于这个值，则会AI自动生成一些图片。\n",
-    "如果关闭了下面的with_prior_preservation，那么这个参数就没用了。\n",
+    "class image 的数量。如果 class-images 文件夹内的图片数量小于这个值，则会 AI 自动生成一些图片。\n",
+    "如果关闭了下面的 with_prior_preservation，那么这个参数就没用了。\n",
     "\n",
     "### with_prior_preservation\n",
-    "关闭了这个参数以后，训练将不会再用class images，变为native training。训练画风需要关闭\n",
+    "关闭了这个参数以后，训练将不会再用 class images，变为 native training。训练画风需要关闭这个参数\n",
     "\n",
-    "更深入的细节可以参考这个[stable-diffusion-book](https://stable-diffusion-book.vercel.app/train/DreamBooth)"
+    "更深入的细节可以参考这个 [DreamBooth讲解](https://guide.novelai.dev/advanced/finetuning/dreambooth)"
    ]
   },
   {
@@ -276,7 +278,7 @@
    "id": "31fe1929-395e-4175-97b7-096b8c1133ee",
    "metadata": {},
    "source": [
-    "## 从中途继续训练，需要运行下面这个\n",
+    "## 如果是从中途继续训练，需要运行下面这个\n",
     "\n",
     "如果是继续训练就更改这个路径到想继续训练的模型文件夹然后运行这个"
    ]
@@ -306,6 +308,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(f\"[*] 模型源路径 {MODEL_NAME}\")\n",
+    "print(f\"[*] 训练好的模型将会保存在这个路径 {OUTPUT_DIR}\")\n",
+    "\n",
     "ema_arg = \"--use_ema\" if use_ema else \"\"\n",
     "da_arg = \"--debug_arb\" if debug_arb else \"\"\n",
     "db_arg = \"--debug_prompt\" if debug_prompt else \"\"\n",
@@ -328,10 +333,7 @@
     "if save_weights_to_wandb:\n",
     "  wandb_arg = \"--wandb --wandb_artifact\"\n",
     "\n",
-    "%cd /root/autodl-tmp/dreambooth-aki\n",
-    "!mkdir -p $OUTPUT_DIR\n",
-    "\n",
-    "!$ACCELERATE_BIN launch $TRAINER \\\n",
+    "!python -m accelerate.commands.launch $TRAINER \\\n",
     "  --mixed_precision=\"fp16\" \\\n",
     "  --pretrained_model_name_or_path=$MODEL_NAME \\\n",
     "  --instance_data_dir=$INSTANCE_DIR \\\n",
@@ -358,7 +360,7 @@
     "  --num_cycle=$restart_cycle \\\n",
     "  --last_epoch=$last_epoch \\\n",
     "  --append_prompt=$append_prompt \\\n",
-    "  --use_8bit_adam $da_arg $db_arg $ema_arg \\\n",
+    "  --use_8bit_adam --xformers $da_arg $db_arg $ema_arg \\\n",
     "  $ppl_arg $wandb_arg $extra_prompt_arg $gdc_arg $arb_arg $tte_arg $scale_lr_arg $dp_arg $pd_arg\n",
     "\n",
     "# disabled: --not_cache_latents"
@@ -387,13 +389,11 @@
     "model_folder_name = \"checkpoint_last\"\n",
     "convert_model_path = f\"output/{model_folder_name}\"\n",
     "ckpt_path = f'{convert_model_path}/model.ckpt'\n",
-    "save_half = True\n",
-    "use_alt = False\n",
+    "save_half = True # 改为 False 保存单精度模型（4G）\n",
     "\n",
     "ckpt_convert_half_arg = \"--half\" if save_half else \"\"\n",
-    "back_converter_arg = \"back_convert_alt.py\" if use_alt else \"back_convert.py\"\n",
     "\n",
-    "!$py310 $back_converter_arg --model_path $convert_model_path --checkpoint_path $ckpt_path $ckpt_convert_half_arg\n",
+    "!python back_convert.py --model_path $convert_model_path --checkpoint_path $ckpt_path $ckpt_convert_half_arg\n",
     "print(f\"[*] 转换的模型保存在如下路径 {ckpt_path}\")"
    ]
   },
