Misc: Improve saving interval to avoid full disk space.

--- a/dreambooth-aki.ipynb
+++ b/dreambooth-aki.ipynb
@@ -246,8 +246,12 @@
     "# 从 txt 读取prompt\n",
     "read_prompt_from_txt = False\n",
     "append_prompt = \"instance\"\n",
-    "# 保存间隔\n",
+    "# 是否自动决定保存间隔\n",
+    "using_auto_save_interval = False\n",
+    "auto_save_interval = max_train_steps // 5 // 100 * 100\n",
+    "# 保存间隔。如果using_auto_save_interval参数为True，则将使用自动保存间隔，反则使用下一行的保存间隔设置。\n",
     "save_interval = 500\n",
+    "save_interval = auto_save_interval if using_auto_save_interval else save_interval\n",
     "# 使用deepdanbooru\n",
     "use_deepdanbooru = False\n",
     "\n",
