fix convert && support safetensors

--- a/dreambooth-aki.ipynb
+++ b/dreambooth-aki.ipynb
@@ -42,13 +42,14 @@
     "\n",
     "# 本镜像专属\n",
     "os.environ[\"PATH\"] = f'/root/miniconda3/envs/diffusers/bin:{os.environ[\"PATH\"]}'\n",
+    "os.environ[\"HF_HOME\"] = \".cache\"\n",
     "DB_SCRIPT_WORK_PATH = os.getcwd() # \"/root/autodl-tmp/dreambooth-aki\"\n",
     "\n",
     "!python --version\n",
     "%cd $DB_SCRIPT_WORK_PATH\n",
     "\n",
     "TRAINER = \"train_dreambooth.py\"\n",
-    "CONVERTER = \"convert_v2.py\"\n",
+    "CONVERTER = \"convert_v3.py\"\n",
     "BACK_CONVERTER = \"back_convert.py\"\n",
     "\n",
     "SRC_PATH = \"./model-sd\"\n",
@@ -78,8 +79,8 @@
    "outputs": [],
    "source": [
     "# 这步骤有些慢，没准要等个几分钟\n",
-    "vae_arg = f\"--vae_path {SRC_PATH}/animevae.pt\"\n",
-    "!python $CONVERTER --checkpoint_path $SRC_PATH/model.ckpt --original_config_file $SRC_PATH/config.yaml $vae_arg --dump_path $MODEL_NAME --scheduler_type ddim"
+    "SOURCE_CHECKPOINT_PATH = f\"./model-sd/model.safetensors\" # 源模型位置\n",
+    "!python $CONVERTER --checkpoint_path $SOURCE_CHECKPOINT_PATH --dump_path $MODEL_NAME"
    ]
   },
   {
@@ -97,13 +98,15 @@
    "source": [
     "以训练人物为例，\n",
     "\n",
-    "INSTANCE_PROMPT 中填入 masterpiece, best quality, bocchitherock girl\n",
+    "INSTANCE_PROMPT 中填入 bocchitherock girl\n",
     "这个bocchitherock需要你自己替换为要训练的tag名。你可以指定任意tag，但是需要找一个“不存在的词”。这里的bocchitherock是我做示范用的训练“孤独摇滚”中人物写的一个tag。\n",
     "注意：不要再用别的教程里的**sks**了，这个sks是一把枪的名字，可能会生成的时候带上这把枪\n",
     "\n",
     "CLASS_PROMPT 是让AI自动生成class image用的tag。复制一份INSTANCE_PROMPT，删掉你学习的tag即可。比如这里删掉了bocchitherock\n",
     "\n",
-    "同理，下面的预览图tag设置也记得改。"
+    "同理，下面的预览图tag设置也记得改。\n",
+    "\n",
+    "训练画风时，可以不需要 INSTANCE_PROMPT，直接删空引号内的内容。"
    ]
   },
   {
@@ -114,7 +117,7 @@
    "outputs": [],
    "source": [
     "# INSTANCE_PROMPT\n",
-    "INSTANCE_PROMPT = \"masterpiece, best quality, bocchitherock 1girl\"\n",
+    "INSTANCE_PROMPT = \"bocchitherock girl\"\n",
     "INSTANCE_DIR = \"./instance-images\"\n",
     "\n",
     "# class image 设置\n",
@@ -234,24 +237,20 @@
     "## [\"linear\", \"cosine\", \"cosine_with_restarts\", \"polynomial\", \"constant\", \"constant_with_warmup\", \"cosine_with_restarts_mod\", \"cosine_mod\"]\n",
     "lr_scheduler = \"cosine_with_restarts\"\n",
     "lr_warmup_steps = 100\n",
-    "# batch_size\n",
-    "train_batch_size = 1\n",
-    "# class_images 数量\n",
-    "num_class_images = 20\n",
+    "train_batch_size = 1 # batch_size\n",
+    "num_class_images = 20 # 自动生成的 class_images 数量\n",
     "\n",
     "with_prior_preservation = True\n",
+    "train_text_encoder = False # 训练文本编码器\n",
+    "use_aspect_ratio_bucket = False # 使用 ARB\n",
     "\n",
     "# 从文件名读取 prompt\n",
     "read_prompt_from_filename = False\n",
     "# 从 txt 读取prompt\n",
     "read_prompt_from_txt = False\n",
     "append_prompt = \"instance\"\n",
-    "# 是否自动决定保存间隔\n",
-    "using_auto_save_interval = False\n",
-    "auto_save_interval = max_train_steps // 5 // 100 * 100\n",
-    "# 保存间隔。如果using_auto_save_interval参数为True，则将使用自动保存间隔，反则使用下一行的保存间隔设置。\n",
+    "# 保存间隔\n",
     "save_interval = 500\n",
-    "save_interval = auto_save_interval if using_auto_save_interval else save_interval\n",
     "# 使用deepdanbooru\n",
     "use_deepdanbooru = False\n",
     "\n",
@@ -263,7 +262,6 @@
     "clip_skip = 1\n",
     "sample_batch_size = 4\n",
     "prior_loss_weight = 1.0\n",
-    "use_aspect_ratio_bucket = False\n",
     "scale_lr = False\n",
     "scale_lr_sqrt = False\n",
     "gradient_checkpointing = True\n",
@@ -271,7 +269,6 @@
     "debug_arb = False\n",
     "debug_prompt = False\n",
     "use_ema = False\n",
-    "train_text_encoder = False\n",
     "#only works with _mod scheduler\n",
     "restart_cycle = 1\n",
     "last_epoch = -1"
@@ -477,9 +474,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "diffusers",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "diffusers"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -491,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
